# Valhalla

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/: App.css  App.tsx  PetApp.tsx  SelectionApp.tsx  config.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CharacterDetailOverlay.tsx  ChatOverlay.tsx  GoldRain.tsx  ImageDetailOverlay.tsx  MatrixRain.tsx  Navigation.tsx  ParticleBackground.tsx  SoulChatOverlay.tsx
src/components/pet/: PetChatPanel.tsx  PetContextMenu.tsx  PetSprite.tsx  PixelPetSprite.tsx
src/data/: prebuilt.ts
src/hooks/: use-theme.ts  useTransparentSprite.ts
src/lib/: VortexGallery.ts  api.ts  fileExtract.ts  imageApi.ts  petActions.ts  search.ts  seedManager.ts  soul.ts  spriteStore.ts  spriteUtils.ts  store.ts  system-prompt.ts  types.ts
src/pages/: ChatPage.tsx  HallPage.tsx  Home.tsx  Info.tsx  SettingsPage.tsx  SpriteGenPage.tsx  SummonPage.tsx
src/sections/: AboutSection.tsx  ChatSection.tsx  ContactSection.tsx  HeroSection.tsx
src/types/: normalize-wheel.d.ts
